# papurs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  NOTES.md  README.md  ROADMAP.md  license-grant.txt
examples/: diag.rs
src/: apu.rs  blip.rs  engine.rs  lib.rs  plugin.rs
tests/: gold.rs
tests/cpp_harness/: JuceHeader.h  PadPluginEditor.h  PluginEditor.h  main.cpp
