[package]
name = "papurs"
version = "0.1.0"
edition = "2024"
description = "Game Boy APU synth VST plugin - Rust port of PAPU"
license = "LGPL-2.1-or-later"

[lib]
name = "papurs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
vst = "0.4.0"

[dev-dependencies]
expect-test = "1.5.1"
